bug
background doesn't fit

--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -108,14 +108,18 @@ label {
 /*************
  *	CONTENT  *
  *************/
-.container-fluid {
+.backHomeandNav {
 	background: url('../images/men-1920x1081.jpg') no-repeat center center fixed;
 	-webkit-background-size: 100%;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
 	background-color: #1a1b25;
-	/*height: 100%;*/
+	height: 100%;
+}
+
+.container-fluid {
+	padding: 0;
 }
 
 .row {
@@ -309,7 +313,7 @@ h1 span:nth-child(2) {
 	margin-bottom: 0px;
 	background-color: rgba(26,27,37,0.3);
 	font-weight: 700;
-	margin: 0 -15px;
+	/*margin: 0 -15px;*/
 	border-radius: 0;
 }
 
